--- a/TaskOne/index.html
+++ b/TaskOne/index.html
@@ -23,7 +23,7 @@
       </div>
       <!-- Slack Name -->
       <div class="content text-center mt-4">
-        <h1 data-testid="slackUserName">Slack Name: Amanda Fredrick</h1>
+        <h1 data-testid="slackUserName">Amanda Fredrick</h1>
         <!-- Current Day of the Week -->
         <p data-testid="currentDayOfTheWeek"></p>
 
